--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -1,4 +1,10 @@
-{% include 'recipes/partials/head.html' %}
+<!DOCTYPE html>
+<html lang="pt-br">
+
+<head>
+    <title>{% block title %}{% endblock title %} Recipes</title>
+    {% include 'recipes/partials/head.html' %}
+</head>
 
 <body>
     {% include 'recipes/partials/header.html' %}
